Some Examples For Stream API